fix[nginx]: usage of root instead of alias chore[docs]: update README.md

--- a/default.conf
+++ b/default.conf
@@ -11,11 +11,11 @@ server {
     }
 
     location /assets {
-        root /usr/share/nginx/assets;
+        root /usr/share/nginx;
     }
 
     location /favicon.ico {
-        alias /usr/share/nginx/assets/favicon.ico;
+        root /usr/share/nginx/assets;
     }
 
     error_page  404              /404.html;
